# nanobot-rust

./: .gitignore  .pr-body.md  .pr-body.txt  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  README.md  SPRINT.md  TASK.md
.cargo/: config.toml
.omc/: .project-memory.json.tmp.3b2b63c4-1de8-4d5d-8c5d-6cd94b3e64d0  project-memory.json
crates/kestrel-agent/: Cargo.toml  README.md
crates/kestrel-agent/src/: adaptive_timeout.rs  cancel_registry.rs  compaction.rs  context.rs  context_budget.rs  heartbeat.rs  hook.rs  lib.rs  loop_mod.rs  notes.rs  runner.rs  skills.rs  stream_health.rs  stream_progress.rs  subagent.rs
crates/kestrel-agent/tests/: pipeline_e2e.rs  runner_e2e.rs  self_evolution_e2e.rs
crates/kestrel-api/: Cargo.toml  README.md
crates/kestrel-api/src/: lib.rs  server.rs
crates/kestrel-api/tests/: http_integration.rs
crates/kestrel-channels/: Cargo.toml  README.md
crates/kestrel-channels/src/: base.rs  commands.rs  lib.rs  manager.rs  registry.rs  stream_consumer.rs
crates/kestrel-channels/tests/: discord_mock.rs  gateway_routing.rs  proxy_client.rs  telegram_mock.rs  websocket_integration.rs
crates/kestrel-config/: Cargo.toml  README.md
crates/kestrel-config/examples/: migrate.rs
crates/kestrel-config/src/: lib.rs  loader.rs  migration.rs  paths.rs  platform.rs  python_migrate.rs  python_schema.rs  schema.rs  validate.rs
crates/kestrel-cron/: Cargo.toml  README.md
crates/kestrel-cron/src/: lib.rs  service.rs  state_store.rs  types.rs
crates/kestrel-daemon/: Cargo.toml
crates/kestrel-daemon/src/: audit.rs  daemonize.rs  lib.rs  logging.rs  pid_file.rs  windows_service.rs
crates/kestrel-heartbeat/: Cargo.toml  README.md
crates/kestrel-heartbeat/src/: checks.rs  lib.rs  service.rs  types.rs
crates/kestrel-learning/: Cargo.toml
crates/kestrel-learning/src/: config.rs  consumer.rs  event.rs  lib.rs  processor.rs  prompt.rs  store.rs
crates/kestrel-memory/: Cargo.toml
crates/kestrel-memory/src/: config.rs  embedding.rs  error.rs  hot_store.rs  lib.rs  security_scan.rs  store.rs  tantivy_store.rs  text_search.rs  tiered.rs  types.rs  warm_store.rs
crates/kestrel-providers/: Cargo.toml  README.md
crates/kestrel-providers/src/: anthropic.rs  base.rs  lib.rs  middleware.rs  openai_compat.rs  rate_limit.rs  registry.rs  retry.rs
crates/kestrel-providers/tests/: anthropic_sse.rs  openai_sse.rs
crates/kestrel-security/: Cargo.toml  README.md
crates/kestrel-security/src/: lib.rs  network.rs
crates/kestrel-session/: Cargo.toml  README.md
crates/kestrel-session/src/: lib.rs  manager.rs  note_store.rs  store.rs  types.rs
crates/kestrel-skill/: Cargo.toml
crates/kestrel-skill/src/: compiler.rs  config.rs  error.rs  lib.rs  manifest.rs  registry.rs  skill.rs
crates/kestrel-tools/: Cargo.toml  README.md
crates/kestrel-tools/src/: lib.rs  registry.rs  skill_loader.rs  skill_view.rs  skills.rs  trait_def.rs
crates/kestrel-tools/src/builtins/: cron.rs  filesystem.rs  memory.rs  message.rs  mod.rs  script.rs  search.rs  shell.rs  spawn.rs  web.rs
crates/kestrel-tools/src/builtins/terminal/: emulator.rs  manager.rs  mod.rs  screen.rs  session.rs  tools.rs
crates/nanobot-agent/: Cargo.toml  README.md
crates/nanobot-agent/src/: compaction.rs  context.rs  context_budget.rs  heartbeat.rs  hook.rs  lib.rs  loop_mod.rs  memory.rs  notes.rs  runner.rs  skills.rs  subagent.rs
crates/nanobot-agent/tests/: pipeline_e2e.rs  runner_e2e.rs  self_evolution_e2e.rs
crates/nanobot-api/: Cargo.toml  README.md
crates/nanobot-api/src/: lib.rs  server.rs
crates/nanobot-api/tests/: http_integration.rs
crates/nanobot-channels/: Cargo.toml  README.md
crates/nanobot-channels/src/: base.rs  commands.rs  lib.rs  manager.rs  registry.rs
crates/nanobot-channels/tests/: discord_mock.rs  gateway_routing.rs  proxy_client.rs  telegram_mock.rs
crates/nanobot-config/: Cargo.toml  README.md
crates/nanobot-config/examples/: migrate.rs
crates/nanobot-config/src/: lib.rs  loader.rs  migration.rs  paths.rs  python_migrate.rs  python_schema.rs  schema.rs  validate.rs
crates/nanobot-cron/: Cargo.toml  README.md
crates/nanobot-cron/src/: lib.rs  service.rs  state_store.rs  types.rs
crates/nanobot-daemon/: Cargo.toml
crates/nanobot-daemon/src/: daemonize.rs  lib.rs  logging.rs  pid_file.rs  signal.rs
crates/nanobot-heartbeat/: Cargo.toml  README.md
crates/nanobot-heartbeat/src/: checks.rs  lib.rs  service.rs  types.rs
crates/nanobot-learning/: Cargo.toml
crates/nanobot-learning/src/: config.rs  consumer.rs  event.rs  lib.rs  processor.rs  prompt.rs  store.rs
crates/nanobot-memory/: Cargo.toml
crates/nanobot-memory/src/: config.rs  error.rs  hot_store.rs  lib.rs  types.rs  warm_store.rs
crates/nanobot-providers/: Cargo.toml  README.md
crates/nanobot-providers/src/: anthropic.rs  base.rs  lib.rs  middleware.rs  openai_compat.rs  rate_limit.rs  registry.rs  retry.rs
crates/nanobot-providers/tests/: anthropic_sse.rs  openai_sse.rs
crates/nanobot-security/: Cargo.toml  README.md
crates/nanobot-security/src/: lib.rs  network.rs
crates/nanobot-session/: Cargo.toml  README.md
crates/nanobot-session/src/: lib.rs  manager.rs  note_store.rs  store.rs  types.rs
crates/nanobot-skill/: Cargo.toml
crates/nanobot-skill/src/: compiler.rs  config.rs  error.rs  lib.rs  loader.rs  manifest.rs  registry.rs  skill.rs
crates/nanobot-tools/: Cargo.toml  README.md
crates/nanobot-tools/src/: lib.rs  registry.rs  schema.rs  skill_loader.rs  skills.rs  trait_def.rs
crates/nanobot-tools/src/builtins/: cron.rs  filesystem.rs  message.rs  mod.rs  search.rs  shell.rs  spawn.rs  web.rs
docs/: 01-blue-hat-architecture.md  02-white-hat-specification.md  03-red-hat-critique.md  04-black-hat-risks.md  05-yellow-hat-value.md  06-green-hat-design.md  WHITEHAT_INVENTORY.md  hat-black-analysis.md  hat-blue-analysis.md  hat-green-analysis.md  hat-red-analysis.md  hat-white-analysis.md  hat-yellow-analysis.md  plan-daemon.md  sprint-plan.md  task-black-phase2.md  task-black.md  task-blue-phase2.md  task-green-phase2.md  task-green.md  (+4 more)
(+68 files in other folders)
