[workspace]
resolver = "2"
members = [
    "crates/kestrel-core",
    "crates/kestrel-config",
    "crates/kestrel-bus",
    "crates/kestrel-session",
    "crates/kestrel-security",
    "crates/kestrel-providers",
    "crates/kestrel-tools",
    "crates/kestrel-agent",
    "crates/kestrel-cron",
    "crates/kestrel-heartbeat",
    "crates/kestrel-channels",
    "crates/kestrel-api",
    "crates/kestrel-daemon",
    "crates/kestrel-memory",
    "crates/kestrel-skill",
    "crates/kestrel-learning",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream", "socks"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
cron = "0.15"

# Concurrency
parking_lot = "0.12"
dashmap = "6"

# Misc
uuid = { version = "1", features = ["v4"] }
regex = "1"
glob = "0.3"
tempfile = "3"
rand = "0.9"
sha2 = "0.10"
base64 = "0.22"
url = "2"
ipnet = "2"
dirs = "5"
lru = "0.12"

# Vector database
lancedb = "0.27"
arrow-array = "57"
arrow-schema = "57"

# ─── Main binary package ────────────────────────────────────

[package]
name = "kestrel"
version.workspace = true
edition.workspace = true

[[bin]]
name = "kestrel"
path = "src/main.rs"

[dependencies]
kestrel-core = { path = "crates/kestrel-core" }
kestrel-config = { path = "crates/kestrel-config" }
kestrel-bus = { path = "crates/kestrel-bus" }
kestrel-session = { path = "crates/kestrel-session" }
kestrel-security = { path = "crates/kestrel-security" }
kestrel-providers = { path = "crates/kestrel-providers" }
kestrel-tools = { path = "crates/kestrel-tools" }
kestrel-agent = { path = "crates/kestrel-agent" }
kestrel-cron = { path = "crates/kestrel-cron" }
kestrel-heartbeat = { path = "crates/kestrel-heartbeat" }
kestrel-channels = { path = "crates/kestrel-channels" }
kestrel-api = { path = "crates/kestrel-api" }
kestrel-daemon = { path = "crates/kestrel-daemon" }
kestrel-memory = { path = "crates/kestrel-memory" }
kestrel-skill = { path = "crates/kestrel-skill" }
kestrel-learning = { path = "crates/kestrel-learning" }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
