[package]
name = "kestrel-agent"
version.workspace = true
edition.workspace = true

[dependencies]
kestrel-core = { path = "../kestrel-core" }
kestrel-config = { path = "../kestrel-config" }
kestrel-bus = { path = "../kestrel-bus" }
kestrel-session = { path = "../kestrel-session" }
kestrel-providers = { path = "../kestrel-providers" }
kestrel-tools = { path = "../kestrel-tools" }
kestrel-channels = { path = "../kestrel-channels" }
kestrel-memory = { path = "../kestrel-memory" }
kestrel-cron = { path = "../kestrel-cron" }
kestrel-heartbeat = { path = "../kestrel-heartbeat" }
kestrel-skill = { path = "../kestrel-skill" }
kestrel-learning = { path = "../kestrel-learning" }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
filetime = "0.2"
kestrel-test-utils = { path = "../kestrel-test-utils" }
