[package]
name = "kestrel-api"
version.workspace = true
edition.workspace = true

[dependencies]
kestrel-core = { path = "../kestrel-core" }
kestrel-config = { path = "../kestrel-config" }
kestrel-bus = { path = "../kestrel-bus" }
kestrel-session = { path = "../kestrel-session" }
kestrel-agent = { path = "../kestrel-agent" }
kestrel-providers = { path = "../kestrel-providers" }
kestrel-tools = { path = "../kestrel-tools" }
kestrel-heartbeat = { path = "../kestrel-heartbeat" }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
http-body-util = "0.1"
