[package]
name = "kestrel-channels"
version.workspace = true
edition.workspace = true

[dependencies]
kestrel-core = { path = "../kestrel-core" }
kestrel-config = { path = "../kestrel-config" }
kestrel-providers = { path = "../kestrel-providers" }
kestrel-bus = { path = "../kestrel-bus" }
kestrel-session = { path = "../kestrel-session" }
kestrel-skill = { path = "../kestrel-skill" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
aes-gcm = { workspace = true }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
tungstenite = "0.26"

[dev-dependencies]
tempfile = { workspace = true }
chrono = { workspace = true }
