[package]
name = "kestrel-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
kestrel-config = { path = "../kestrel-config" }
anyhow = { workspace = true }
chrono = { workspace = true }
libc = "0.2"
nix = { version = "0.29", features = ["process", "signal", "fs"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
filetime = "0.2"
