[package]
name = "kestrel-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
kestrel-config = { path = "../kestrel-config" }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["process", "signal", "fs"] }

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
fs4 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
filetime = "0.2"
