[package]
name = "kestrel-heartbeat"
version.workspace = true
edition.workspace = true

[dependencies]
kestrel-core = { path = "../kestrel-core" }
kestrel-config = { path = "../kestrel-config" }
kestrel-bus = { path = "../kestrel-bus" }
kestrel-providers = { path = "../kestrel-providers" }
kestrel-session = { path = "../kestrel-session" }
kestrel-tools = { path = "../kestrel-tools" }
kestrel-memory = { path = "../kestrel-memory" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
futures = { workspace = true }
