[package]
name = "kestrel-learning"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kestrel-core = { path = "../kestrel-core" }
kestrel-memory = { path = "../kestrel-memory" }
kestrel-skill = { path = "../kestrel-skill" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
toml = "0.8"
