[package]
name = "kestrel-session"
version.workspace = true
edition.workspace = true

[dependencies]
kestrel-core = { path = "../kestrel-core" }
kestrel-config = { path = "../kestrel-config" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
