[package]
name = "nanobot-agent"
version.workspace = true
edition.workspace = true

[dependencies]
nanobot-core = { path = "../nanobot-core" }
nanobot-config = { path = "../nanobot-config" }
nanobot-bus = { path = "../nanobot-bus" }
nanobot-session = { path = "../nanobot-session" }
nanobot-providers = { path = "../nanobot-providers" }
nanobot-tools = { path = "../nanobot-tools" }
nanobot-memory = { path = "../nanobot-memory" }
nanobot-cron = { path = "../nanobot-cron" }
nanobot-heartbeat = { path = "../nanobot-heartbeat" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
filetime = "0.2"
