[package]
name = "nanobot-api"
version.workspace = true
edition.workspace = true

[dependencies]
nanobot-core = { path = "../nanobot-core" }
nanobot-config = { path = "../nanobot-config" }
nanobot-bus = { path = "../nanobot-bus" }
nanobot-session = { path = "../nanobot-session" }
nanobot-agent = { path = "../nanobot-agent" }
nanobot-providers = { path = "../nanobot-providers" }
nanobot-tools = { path = "../nanobot-tools" }
nanobot-heartbeat = { path = "../nanobot-heartbeat" }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
http-body-util = "0.1"
