[package]
name = "nanobot-config"
version.workspace = true
edition.workspace = true

[dependencies]
nanobot-core = { path = "../nanobot-core" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
dirs = "5"
tracing = { workspace = true }
ipnet = "2"

[dev-dependencies]
tempfile = { workspace = true }
