[package]
name = "nanobot-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
nanobot-config = { path = "../nanobot-config" }
anyhow = { workspace = true }
libc = "0.2"
nix = { version = "0.29", features = ["process", "signal", "fs"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
