[package]
name = "nanobot-heartbeat"
version.workspace = true
edition.workspace = true

[dependencies]
nanobot-core = { path = "../nanobot-core" }
nanobot-config = { path = "../nanobot-config" }
nanobot-bus = { path = "../nanobot-bus" }
nanobot-providers = { path = "../nanobot-providers" }
nanobot-session = { path = "../nanobot-session" }
nanobot-tools = { path = "../nanobot-tools" }
nanobot-memory = { path = "../nanobot-memory" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
futures = { workspace = true }
