[package]
name = "nanobot-learning"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nanobot-core = { path = "../nanobot-core" }
nanobot-memory = { path = "../nanobot-memory" }
nanobot-skill = { path = "../nanobot-skill" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
toml = "0.8"
