[package]
name = "nanobot-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
nanobot-core = { path = "../nanobot-core" }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
lru = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
