[package]
name = "nanobot-skill"
version.workspace = true
edition.workspace = true

[dependencies]
nanobot-core = { path = "../nanobot-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
toml = "0.8"
tracing = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
