[package]
name = "nanobot-tools"
version.workspace = true
edition.workspace = true

[dependencies]
nanobot-core = { path = "../nanobot-core" }
nanobot-config = { path = "../nanobot-config" }
nanobot-bus = { path = "../nanobot-bus" }
nanobot-security = { path = "../nanobot-security" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }

notify = { version = "6", default-features = false, features = ["macos_fsevent"] }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
filetime = "0.2"
